[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "asyncblink"
version = "0.4.0"
authors = [
  { name="Juca Crispim" },
]
description = "Signals with coroutines!"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    'blinker>=1.8'
]

classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: GNU General Public License (GPL)',
    "Operating System :: OS Independent",
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
"Homepage" = "https://pypi.python.org/pypi/asyncblink"
